fix composer overflow and scroll issue

--- a/web/src/App.module.css
+++ b/web/src/App.module.css
@@ -2,6 +2,7 @@
   height: 100%;
   max-width: 600px;
   margin: auto;
+  position: relative;
 }
 
 .login {
@@ -28,4 +29,6 @@
 
 h1 {
   text-align: center;
+  margin: 0;
+  padding: 1em;
 }
