--- a/web/src/components/Footer.module.css
+++ b/web/src/components/Footer.module.css
@@ -1,5 +1,6 @@
 .filler {
-    height: 100%;
+    position: absolute;
+    bottom: 0;
     width: 100%;
     display: flex;
     flex-direction: column;
